cluster/api/service_manager/service_manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-deployment-testing
  labels:
    app: sm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm
  template:
    metadata:
      labels:
        app: sm
    spec:
      containers:
      - name: sm-testing
        image: 158.160.22.115:5000/ubersite/service_manager:testing
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http-sm-testing
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-deployment-prestable
  labels:
    app: sm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm
  template:
    metadata:
      labels:
        app: sm
    spec:
      containers:
      - name: sm-prestable
        image: 158.160.22.115:5000/ubersite/service_manager:prestable
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http-sm-pre
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-deployment-production
  labels:
    app: sm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm
  template:
    metadata:
      labels:
        app: sm
    spec:
      containers:
      - name: sm-production
        image: 158.160.22.115:5000/ubersite/service_manager:production
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http-sm-prod
