cluster/api/service_manager/service_manager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sm
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-sm-svc
  selector:
    app: sm
