cluster/api/service_manager/service_manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sm-ingress
spec:
  rules:
    - host: bvdvlg.ru
      http:
        paths:
          - pathType: Prefix
            path: /
            backend: 
              service:
                name: sm
                port:
                  number: 80
